5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4349/executions/1596_1571.log
== TEST (2019-03-26 09:31:49) 
-- CODE:
texto="Willyan Soares"
print(texto.upper)
-- OUTPUT:
<built-in method upper of str object at 0x7f0c78910570>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 09:32:11) 
-- CODE:
texto="Willyan Soares"
print(texto.upper)
-- OUTPUT:
<built-in method upper of str object at 0x7fdc5a22f570>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 09:33:19) 
-- CODE:
texto="Willyan Soares"

-- OUTPUT:
<built-in method upper of str object at 0x7fdc5a22f570>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 09:33:35) 
-- CODE:
print="Willyan Soares"

-- OUTPUT:
<built-in method upper of str object at 0x7fdc5a22f570>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 09:33:58) 
-- CODE:
print=("Willyan Soares")

-- OUTPUT:
<built-in method upper of str object at 0x7fdc5a22f570>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 09:35:11) 
-- CODE:
print(Willyan.upper(Willyan))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(Willyan.upper(Willyan))
NameError: name 'Willyan' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 09:35:54) 
-- CODE:
print(Willyan.upper)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(Willyan.upper)
NameError: name 'Willyan' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 09:36:32) 
-- CODE:
print(Willyan)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(Willyan)
NameError: name 'Willyan' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 09:37:34) 
-- CODE:
print= (Willyan)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print= (Willyan)
NameError: name 'Willyan' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 09:37:47) 
-- CODE:
print= ("Willyan")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print= (Willyan)
NameError: name 'Willyan' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 09:38:47) 
-- CODE:
texto= ("Willyan")
print(texto.upper())
-- OUTPUT:
WILLYAN
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 09:38:58) 
-- CODE:
texto= ("Willyan")
print(texto.upper())
-- EXECUTION TIME:
0.148721
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
WILLYAN
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 09:39:13) 
-- CODE:
texto= ("Willyan")
print(texto.upper(Willyan))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(texto.upper(Willyan))
NameError: name 'Willyan' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 09:39:21) 
-- CODE:
texto= ("Willyan")
print(texto.upper())
-- OUTPUT:
WILLYAN
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 09:39:46) 
-- CODE:
texto= ("Willyan")
print(texto.upper())
-- EXECUTION TIME:
0.186348
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
WILLYAN
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 09:40:01) 
-- CODE:
texto= ("Willyan")
print(Willyan.upper())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(Willyan.upper())
NameError: name 'Willyan' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 09:40:34) 
-- CODE:
texto= ("Willyan")
print(texto.upper())
-- OUTPUT:
WILLYAN
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 09:41:25) 
-- CODE:
texto= ("Willyan")
print(texto.upper())
-- EXECUTION TIME:
0.135832
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
WILLYAN
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 09:41:32) 
-- CODE:
texto= ("Willyan")
print(texto.upper(Willyan))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(texto.upper(Willyan))
NameError: name 'Willyan' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 09:41:39) 
-- CODE:
texto= ("Willyan")
print(texto.upper(Willyan))
-- EXECUTION TIME:
0.204593
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1571/main.py", line 2, in <module>
    print(texto.upper(Willyan))
NameError: name 'Willyan' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 09:42:10) 
-- CODE:
texto= ("Willyan")
print(texto.upper("Willyan"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(texto.upper("Willyan"))
TypeError: upper() takes no arguments (1 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 09:42:33) 
-- CODE:
texto= ("Willyan")
print(texto.upper("Willyan")
-- ERROR:
File "XXXX", line 3
    
                                ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 09:42:43) 
-- CODE:
texto= ("Willyan")
print(texto.upper("Willyan"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(texto.upper("Willyan"))
TypeError: upper() takes no arguments (1 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 09:43:17) 
-- CODE:
texto= ("Willyan")
print(texto.upper()"Willyan"))
-- ERROR:
File "XXXX", line 2
    print(texto.upper()"Willyan"))
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 09:43:28) 
-- CODE:
texto= ("Willyan")
print(texto.upper()"Willyan")))
-- ERROR:
File "XXXX", line 2
    print(texto.upper()"Willyan")))
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 09:43:41) 
-- CODE:
texto= ("Willyan")
print(texto.upper()"Willyan")
-- ERROR:
File "XXXX", line 2
    print(texto.upper()"Willyan")
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 09:44:18) 
-- CODE:
texto= ("Willyan")
print(texto.upper()("Willyan")
-- ERROR:
File "XXXX", line 3
    
                                  ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 09:44:33) 
-- CODE:
texto= ("Willyan")
print(texto.upper(("Willyan"))
-- ERROR:
File "XXXX", line 3
    
                                  ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 09:44:59) 
-- CODE:
texto= ("Willyan")
print(texto.upper())"Willyan"))
-- ERROR:
File "XXXX", line 2
    print(texto.upper())"Willyan"))
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 09:45:08) 
-- CODE:
texto= ("Willyan")
print(texto.upper())"Willyan")))
-- ERROR:
File "XXXX", line 2
    print(texto.upper())"Willyan")))
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 09:45:28) 
-- CODE:
texto= ("Willyan")
print(texto.upper())
-- OUTPUT:
WILLYAN
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 09:45:35) 
-- CODE:
texto= ("Willyan")
print(texto.upper())
-- EXECUTION TIME:
0.122594
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
WILLYAN
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 09:45:55) 
-- CODE:
texto= ("Willyan")
print(texto .upper())
-- OUTPUT:
WILLYAN
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 09:46:02) 
-- CODE:
texto= ("Willyan")
print(texto .upper())
-- EXECUTION TIME:
0.218116
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
WILLYAN
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 09:46:22) 
-- CODE:
texto= ("Willyan")
print(texto.upper())
-- OUTPUT:
WILLYAN
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 09:47:02) 
-- CODE:
texto= ("Willyan")
print(texto("Willyan").upper())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(texto("Willyan").upper())
TypeError: 'str' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 09:47:25) 
-- CODE:
texto= ("Willyan")
print(texto("Willyan")).upper())
-- ERROR:
File "XXXX", line 2
    print(texto("Willyan")).upper())
                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 09:47:37) 
-- CODE:
texto= ("Willyan")
print(texto("Willyan").upper())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(texto("Willyan").upper())
TypeError: 'str' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 09:47:50) 
-- CODE:
texto= ("Willyan")
print(texto=("Willyan").upper())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(texto=("Willyan").upper())
TypeError: 'texto' is an invalid keyword argument for this function
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 09:48:26) 
-- CODE:
texto= ("Willyan")
print("Willyan").upper())
-- ERROR:
File "XXXX", line 2
    print("Willyan").upper())
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:21:37) 
-- CODE:
texto= ("Willyan")
print(.upper("Willyan")
-- ERROR:
File "XXXX", line 2
    print(.upper("Willyan")
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:21:47) 
-- CODE:
texto= ("Willyan")
print(.upper("Willyan"))
-- ERROR:
File "XXXX", line 2
    print(.upper("Willyan"))
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:21:48) 
-- CODE:
texto= ("Willyan")
print(.upper("Willyan"))
-- EXECUTION TIME:
0.158131
-- ERROR:
  File "/home/codebench/codes/1596/1571/main.py", line 2
    print(.upper("Willyan"))
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:37:10) 
-- CODE:
texto= ("Willyan")
print(texto.upper("Willyan"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(texto.upper("Willyan"))
TypeError: upper() takes no arguments (1 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:37:21) 
-- CODE:
texto= input("Willyan")
print(texto.upper("Willyan"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(texto.upper("Willyan"))
TypeError: upper() takes no arguments (1 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:37:23) 
-- CODE:
texto= input("Willyan")
print(texto.upper("Willyan"))
-- EXECUTION TIME:
0.126668
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1571/main.py", line 2, in <module>
    print(texto.upper("Willyan"))
TypeError: upper() takes no arguments (1 given)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:38:23) 
-- CODE:
texto= input("Willyan")
print(texto.upper())
-- EXECUTION TIME:
0.123998
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
PRIMEIRO_CASO_DE_TESTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:39:09) 
-- CODE:
texto= ("Willyan")
print(texto.upper())
-- OUTPUT:
WILLYAN
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:39:10) 
-- CODE:
texto= ("Willyan")
print(texto.upper())
-- EXECUTION TIME:
0.170276
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
WILLYAN
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:39:19) 
-- CODE:
texto= input("Willyan")
print(texto.upper())
-- OUTPUT:
PRIMEIRO_CASO_DE_TESTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:39:20) 
-- CODE:
texto= input("Willyan")
print(texto.upper())
-- EXECUTION TIME:
0.12705
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
PRIMEIRO_CASO_DE_TESTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 07:57:51) 
-- CODE:
texto= input("Willyan")
print(texto.upper())
-- EXECUTION TIME:
0.156461
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
PRIMEIRO_CASO_DE_TESTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 08:59:03) 
-- CODE:
texto= input("Willyan")
print(texto.upper())
-- OUTPUT:
PRIMEIRO_CASO_DE_TESTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 08:59:05) 
-- CODE:
texto= input("Willyan")
print(texto.upper())
-- EXECUTION TIME:
0.158735
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
PRIMEIRO_CASO_DE_TESTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
